--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -11,7 +11,15 @@
 }
 
 .logo-container {
+    position: relative;
     overflow: hidden;
     height: 0;
     padding-bottom: (100% * 3 / 5);
+    
+    svg {
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+    }
 }
